# pcsr

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  vcpkg.json
.github/workflows/: python-test-vcpkg.yml  python-test.yml  python-wheel-vcpkg.yml
cmake/: FindNumPy.cmake
include/pcsr/: pcsr_cgal.h  pcsr_defs.h
pcsr/: __init__.py  _version.py  tests.py
pcsr/models/: __init__.py
src/: CMakeLists.txt  pcsr.cpp  pcsr_cgal.cpp  pcsr_cgal_py.cpp
