[build-system]
requires = [
  "setuptools>=66.1",
  "versioneer[toml]",
  "scikit-build",
  "cmake",
  "ninja"
]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pcsr/_version.py"
versionfile_build = "pcsr/_version.py"
tag_prefix = "v"
parentdir_prefix = "pcsr-"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
