[build-system]
requires = [
  "setuptools>=42",
  "versioneer[toml]",
  "scikit-build",
  "cmake",
  "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "pcsr"
dependencies = [
    "numpy>=1.14.5",
    "scipy",
    "vtk",
    "rtree",
    "trimesh"
]
dynamic = ["version"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pcsr/_version.py"
versionfile_build = "pcsr/_version.py"
tag_prefix = "v"
parentdir_prefix = "pcsr-"

